# civitcli

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  pyproject.toml
.codex/notes/: codex-cheat-sheet.md
civitcli/: __init__.py  __main__.py  cli.py  config.py  downloader.py
civitcli/renderer/: __init__.py  command_builder.py  parser.py
docs/: implementation-plan.md
tests/: test_cli.py  test_downloader.py
