[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "civitcli"
version = "0.1.0"
description = "Command-line tools for working with Civitai resources"
readme = "README.md"
authors = [{name = "Civitai CLI Team"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "responses>=0.24",
]

[project.scripts]
civitcli = "civitcli.__main__:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["civitcli"]
